# marketing-assistant

./: .gitignore  LICENSE  README.md
coder-agent/: .env.example  Containerfile  README.md  build.sh  pyproject.toml
coder-agent/app/: __main__.py  executor.py  generate_html.py  settings.py
coder-agent/k8s/: configmap.yaml  deployment.yaml  route.yaml  service.yaml
customer-agent/: .env.example  Containerfile  README.md  build.sh  pyproject.toml
customer-agent/app/: __main__.py  customer_query.py  executor.py  settings.py
customer-agent/k8s/: configmap.yaml  deployment.yaml  route.yaml  service.yaml
k8s-agent/: .env.example  Containerfile  README.md  build.sh  pyproject.toml
k8s-agent/app/: __main__.py  deploy.py  executor.py  settings.py
k8s-agent/k8s/: configmap.yaml  deployment.yaml  route.yaml  service.yaml
marketing-agent/: .env.example  Containerfile  README.md  build.sh  pyproject.toml
marketing-agent/app/: __main__.py  executor.py  generate_email.py  settings.py
marketing-agent/k8s/: configmap.yaml  deployment.yaml  route.yaml  service.yaml
orchestrator/: .env.example  Containerfile  README.md  build.sh  pyproject.toml
orchestrator/app/: __main__.py  orchestrator.py  settings.py  ui.py
orchestrator/app/a2a/: __init__.py  client.py  models.py
orchestrator/k8s/: configmap.yaml  deployment.yaml
