[project]
name = "marketing-agent"
version = "1.0.0"
description = "A2A microservice that generates marketing email content in English and Chinese"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=0.3.25",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
