[project]
name = "orchestrator"
version = "1.0.0"
description = "LangGraph orchestrator with Streamlit UI for Macau Casino Marketing Assistant"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "streamlit>=1.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
